@@ -202,8 +202,9 @@ class AllInOneRepository(Repository):
         :param new_value: True to restore the default, False to disable making
                           working trees.
         """
-        raise NotImplementedError(self.set_make_working_trees)
-    
+        if not new_value:
+            raise ValueError('This format always enables working trees.')
+
     def make_working_trees(self):
         """Returns the policy for making working trees on new branches."""
         return True
