@@ -797,6 +797,21 @@ class TestRepository(TestCaseWithRepository):
             self.assertEqual([repo.bzrdir.root_transport.base],
                              [b.base for b in repo.find_branches(using=True)])
 
+    def test_set_get_make_working_trees_true(self):
+        repo = self.make_repository('repo')
+        repo.set_make_working_trees(True)
+        self.assertTrue(repo.make_working_trees())
+
+    def test_set_get_make_working_trees_false(self):
+        repo = self.make_repository('repo')
+        try:
+            repo.set_make_working_trees(False)
+        except ValueError, e:
+            self.assertEqual('This format always enables working trees.',
+                             str(e))
+        else:
+            self.assertFalse(repo.make_working_trees())
+
 
 class TestRepositoryLocking(TestCaseWithRepository):
 
